# BlueBubble

./: App.qml  README.md  Untitled Diagram.drawio  file.py  nextarch.drawio
BlueBubble/: App.qml  BlueBubble.pyproject  BlueBubble.pyproject.user.50a1cc6  BlueBubble.qmlproject  BlueBubble.qmlproject.qtds  BlueBubble.qmlproject.qtds.a56f673  BlueBubble.qmlproject.user.50a1cc6  CMakeLists.txt  bb.psd  chatclient.py  chatserver.py  file.py  qmlmodules  user.txt
BlueBubble/Test/: chatclient.py  chatserver.py  client.py  serv.py
BlueBubble/content/:  contact.qml  App.qml  Bubble.qml  BubbleIn.qml  CMakeLists.txt  Maria  Screen01.ui.qml  adduser.qml  bspacer.qml  contact copy.qml  contact.qml  contacts.txt  element  file.py  ports.txt  spacer.qml  test.py  time.qml  user.txt
BlueBubble/content/notifypy/: __noti__.py  decorator.py  exception.py  mailer.py  notify.py
BlueBubble/content/notifypy/app/: ProviderInterface.py  SMTPEmail.py  SmsProvider.py
BlueBubble/content/notifypy/os_notifiers/binaries/Notificator.app/Contents/Resources/: applet.icns
BlueBubble/content/notifypy/os_notifiers/binaries/Notificator.app/Contents/Resources/Scripts/: main.scpt
BlueBubble/content/notifypy/providers/: Aol.py  Gmail.py  Hotmail.py  Yahoo.py  iCloud.py
BlueBubble/imports/: CMakeLists.txt
BlueBubble/imports/BlueBubble/: CMakeLists.txt  Constants.qml  qmldir
BlueBubble/imports/BlueBubble/designer/: plugin.metainfo
BlueBubble/src/: import_qml_plugins.h
